--- a/contact.html
+++ b/contact.html
@@ -102,11 +102,11 @@
               <div class="row text-center">
   <div class="col-sm-6">
     <div class="contact-info wow fadeInUp animated" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 300ms; animation-name: fadeInUp;">
-      <h3>Tejus Khandelwal</h3>
+      <h3>Sahil Kumar Goyat</h3>
       <h3>Coordinator, Stamatics</h3>
       <ul class="address">
         <!-- <li><i class="fa fa-map-marker"></i> <span> Address:</span> [Tejus Address] </li> -->
-        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-9376715421 </li>
+        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-7404013277 </li>
         <!-- <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:harshitb@iitk.ac.in">  harshitb@iitk.ac.in</a></li> -->
       </ul>
     </div>
@@ -114,11 +114,11 @@
 
   <div class="col-sm-6">
     <div class="contact-info wow fadeInUp animated" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 300ms; animation-name: fadeInUp;">
-      <h3>Rohun Sangam Easwar</h3>
+      <h3>Abhinav Singh</h3>
       <h3>Coordinator, Stamatics</h3>
       <ul class="address">
         <!-- <li><i class="fa fa-map-marker"></i> <span> Address:</span> [Rohun Address] </li> -->
-        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-8356008954 </li>
+        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-8303977767 </li>
         <!-- <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:mkrishna@iitk.ac.in">  mkrishna@iitk.ac.in</a></li> -->
       </ul>
     </div>
@@ -126,11 +126,11 @@
 
   <div class="col-sm-6">
     <div class="contact-info wow fadeInUp animated" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 300ms; animation-name: fadeInUp;">
-      <h3>Sai Praneeth Donthu</h3>
+      <h3>Prerak Agarwal</h3>
       <h3>Coordinator, Stamatics</h3>
       <ul class="address">
         <!-- <li><i class="fa fa-map-marker"></i> <span> Address:</span> [Sai Praneeth Address] </li> -->
-        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-8884858858 </li>
+        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-8528203343 </li>
         <!-- <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com">  [Sai Praneeth Email]</a></li> -->
       </ul>
     </div>
@@ -138,11 +138,11 @@
 
   <div class="col-sm-6">
     <div class="contact-info wow fadeInUp animated" data-wow-duration="1000ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 1000ms; animation-delay: 300ms; animation-name: fadeInUp;">
-      <h3>Sriram Chaitanya Veerapaneni</h3>
+      <h3>Viral Chitlangia</h3>
       <h3>Coordinator, Stamatics</h3>
       <ul class="address">
         <!-- <li><i class="fa fa-map-marker"></i> <span> Address:</span> [Sriram Address] </li> -->
-        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-9945971127 </li>
+        <li><i class="fa fa-phone"></i> <span> Phone:</span> +91-8619301736 </li>
         <!-- <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com">  [Sriram Email]</a></li> -->
       </ul>
     </div>
