--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mathemania 2023</title>
+  <title>Mathemania 2024</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -91,21 +91,29 @@
         <h2 id="coordinators-2023-24" class="" tabindex="-1" style="outline: none;">Coordinators 2023-24</h2>
         <ul>
           <li>
-            <a href="https://www.facebook.com/profile.php?id=100075086745225">Tejus Khandelwal</a>
-            <span class="contact-number">(+91 9376715421)</span>
+            <a href="https://www.instagram.com/sahil_goyat_2004/">Sahil Kumar Goyat</a>
+            <span class="contact-number">(+91 7404013277)</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/profile.php?id=100075449700979">Rohun Sangam Easwar</a>
-            <span class="contact-number">(+91 8356008954)</span>
+            <a href="https://www.instagram.com/abhinavsingh1551/">Abhinav Singh</a>
+            <span class="contact-number">(+91 8303977767)</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/profile.php?id=100075313952714">Sai Praneeth Donthu</a>
-            <span class="contact-number">(+91 8884858858)</span>
+            <a href="https://www.instagram.com/agarwal_prerak7108/">Prerak Agarwal</a>
+            <span class="contact-number">(+91 8528203343)</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/profile.php?id=100088265168357">Sriram Chaitanya Veerapaneni</a>
-            <span class="contact-number">(+91 9945971127)</span>
+            <a href="https://www.instagram.com/viral_chitlangia/">Viral Chitlangia</a>
+            <span class="contact-number">(+91 8619301736)</span>
           </li>
+        </ul>
+
+        <h2 id="coordinators-2023-24" class="">Coordinators 2023-24<a class="header-link" href="#coordinators-2023-24" title="Permalink"><i class="fas fa-link"></i></a></h2>
+        <ul>
+        <li><a href="https://www.facebook.com/profile.php?id=100075086745225">Tejus Khandelwal</a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100075449700979">Rohun Sangam Easwar</a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100075313952714">Sai Praneeth Donthu</a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100088265168357L">Sriram Chaitanya Veerapaneni</a></li>
         </ul>
 
         <h2 id="executives-2023-24" class="">Executives 2023-24<a class="header-link" href="#executives-2023-24" title="Permalink"><i class="fas fa-link"></i></a></h2>
